--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# For MacOS:
+#
+.DS_Store
+.idea
+example.rb
